# filter

./: .gitignore  CMakeLists.txt  README.md  bmp.cpp  bmp.h  filter.cpp
include/: bmp.h
src/: bmp.c  bmp.cpp  filter.c  filter.cpp
